[project]
authors = [{name = "David Svenson", email = "davidsvenson@outlook.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "click",
  "django>=5.2",
  "psycopg2>=2.9.10",
]
description = "A backend for Django's Tasks framework backed by PostgreSQL."
license = "MIT"
name = "dreng"
requires-python = ">=3.13"
version = "0.0.1"

[project.scripts]
dreng = "dreng.scripts.worker:main"
start-repeating-tasks = "dreng.scripts.start_repeating_tasks:main"
task-timer = "dreng.scripts.timer:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
  "ruff",
  {include-group = "tests"},
  {include-group = "typing"},
]
tests = [
  "dj-database-url>=3.0.1",
  "pytest",
  "pytest-django",
  "time-machine",
]
typing = [
  "django-stubs",
  "mypy",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
packages = ["dreng", "tests"]
plugins = ["mypy_django_plugin.main"]
strict = true
strict_equality = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "example_django_project.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests_django_project.settings.postgresql"
python_files = "tests/*.py"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "DJ",
  "DTZ",
  "E",
  "F",
  "G",
  "I",
  "ISC",
  "LOG",
  "PERF",
  "PGH",
  "PIE",
  "Q",
  "RUF008",
  "RUF009",
  "RUF022",
  "RUF034",
  "RUF100",
  "RUF200",
  "SIM",
  "T20",
  "TC",
  "TID",
  "UP",
  "W",
]

ignore = [
  "G004",
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
